@@ -17,7 +17,7 @@ submission mechanism)
 Trog <trog*clamav.net>
 OLE2 and VBA decoders.
 
-Submission management interface (for database developers only): Diego D'Ambra
+Submission management interface (for database developers only): Diego d'Ambra
 <diego*clamav.net>, Thomas Madsen <tm*softcom.dk>
 
 Database developers:
