@@ -631,16 +631,21 @@ int cli_scanole2(int desc, char **virname, long int *scanned, const struct cl_no
 			break;
 		}
 		free(fullname);
+                cli_dbgmsg("decompress VBA project '%s'\n", vba_project->name[i]);
 		data = (unsigned char *) vba_decompress(fd, vba_project->offset[i]);
 		close(fd);
 
-		if(cl_scanbuff(data, strlen(data), virname, root) == CL_VIRUS) {
-		    free(data);
-		    ret = CL_VIRUS;
-		    break;
-		}
+		if(!data) {
+		    cli_dbgmsg("WARNING: VBA project '%s' decompressed to NULL\n", vba_project->name[i]);
+    +           } else {
+		    if(cl_scanbuff(data, strlen(data), virname, root) == CL_VIRUS) {
+			free(data);
+			ret = CL_VIRUS;
+			break;
+		    }
 
-		free(data);
+		    free(data);
+		}
 	    }
 
 	    for(i = 0; i < vba_project->count; i++)
